# FUnTiDES

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  LICENCE_fr.md  README.md  requirements-dev.txt
env/: .env.sh.swo  (+8 more)
fd/: CMakeLists.txt
proxy/: CMakeLists.txt
proxy/include/: SEMproxy.hpp
proxy/src/: SEMproxy.cpp  pysem.cpp
sem/main/: CMakeLists.txt
solver/: CMakeLists.txt
solver/include/: SEMQkGLBasisFunctions.hpp  SEMQkGLBasisFunctionsClassic.hpp  SEMQkGLIntegralsOptim.hpp  SEMsolver.hpp
src/: CMakeLists.txt
src/discretization/: CMakeLists.txt
src/discretization/fd/: CMakeLists.txt  FDTDdata.hpp  FDTDinit.hpp  FDTDkernels.hpp  FDTDmacros.hpp  FDTDutils.hpp
src/discretization/fe/: BasisFunctions.hpp  Integrals.hpp  LagrangeBasis1.hpp  LagrangeBasis2.hpp  LagrangeBasis3GL.hpp  LagrangeBasis4GL.hpp  LagrangeBasis5GL.hpp  Qk_Hexahedron_Lagrange_GaussLobatto.hpp  SEMQkGLBasisFunctions.hpp  SEMQkGLIntegrals.hpp  SEMQkGLIntegralsClassic.hpp  SEMQkGLIntegralsGeos.hpp  SEMQkGLIntegralsOptim.hpp  tensorops.hpp
src/discretization/fe/depricated/: SEMQkGLBasisFunctionsClassic.hpp  SEMQkGLBasisFunctionsOptim.hpp  SEMQkGLIntegralsClassic.hpp  SEMQkGLIntegralsOptim.hpp
src/main/: CMakeLists.txt
src/main/fd/: CMakeLists.txt
src/main/fd/include/: FDproxy.hpp  fd_io.h  fd_options.h  fd_proxy.h  fdtd_io.h  fdtd_options.h  fdtd_proxy.h  fdtd_solver.h  option.hpp
src/main/fd/src/: FDTDmain.cpp  FDmain.cpp  FDproxy.cpp  fd_proxy.cc  fdtd_proxy.cc  fdtd_proxy.cpp  fdtd_solver.cc  fdtd_solver.cpp  main.cc  main.cpp
src/main/fe/: CMakeLists.txt
src/main/fe/include/: SEMproxy.hpp  SEMproxyOptions.hpp  sem_io_controller.h  sem_proxy.h  sem_proxy_options.h
src/main/fe/src/: SEMproxy.cpp  main.cc  main.cpp  sem_proxy.cc
src/main/include/: SEMproxy.hpp  SEMproxyOptions.hpp
src/main/pywrap/: CMakeLists.txt
src/main/pywrap/src/: bindings.cpp
src/main/src/: FDTDmain.cpp  SEMproxy.cpp  main.cpp  pysem.cpp
src/mesh/src/: pyseminfo.cpp
src/model/: CMakeLists.txt  model.hpp
src/model/api/: CMakeLists.txt
src/model/api/include/: builder.h  model.h
src/model/cartesianSEMmesh/: CMakeLists.txt
src/model/cartesianSEMmesh/include/: CartesianParams.hpp  cartesianSEMmesh.hpp  gllpoints.hpp
src/model/cartesianSEMmesh/src/: cartesianSEMmesh.cpp  test_mesh.cpp
src/model/cartesianUnstructMesh/: CMakeLists.txt
src/model/cartesianUnstructMesh/include/: cartesian_unstruct_mesh.h  cartesian_unstruct_params.h
src/model/cartesianUnstructMesh/src/: test_mesh.cc
src/model/cartesian_model_builder/: CMakeLists.txt
src/model/cartesian_model_builder/include/: cartesian_params.h  cartesian_struct_builder.h  cartesian_unstruct_builder.h  cartesian_unstruct_mesh.h  cartesian_unstruct_params.h
src/model/cartesian_model_builder/src/: cartesian_struct_mesh.cc  cartesian_unstruct_mesh.cc  test_mesh.cc
src/model/cartesian_sem_mesh/: CMakeLists.txt
src/model/cartesian_sem_mesh/include/: cartesian_params.h  cartesian_sem_mesh.h  gllpoints.hpp
src/model/cartesian_sem_mesh/src/: cartesian_sem_mesh.cc  test_mesh.cc
src/model/cartesian_unstruct_mesh/: CMakeLists.txt
src/model/cartesian_unstruct_mesh/include/: cartesian_unstruct_mesh.h  cartesian_unstruct_params.h
src/model/cartesian_unstruct_mesh/src/: test_mesh.cc
src/model/grid/include/: fd_boundary.h  fdtd_boundary.h  fdtd_grid_geometry.h  fdtd_grids.h  fdtd_model_io.h  fdtd_velocity_model.h
src/model/meshAPI/include/: baseMesh.hpp
src/model/mesh_api/include/: baseMesh.hpp
src/model/model_api/: CMakeLists.txt
src/model/model_api/include/: gllpoints.h  model_api.h  model_struct.h  model_unstruct.h
src/model/model_api/src/: model_struct.cc  model_unstruct.cc
src/model/model_builder_api/include/: model_builder_api.h
src/model/pywrap/: CMakeLists.txt
src/model/pywrap/include/: bindings_builder.h  bindings_model.h  bindings_utils.h
src/model/pywrap/src/: bindings.cpp
src/model/simpleMesh/: CMakeLists.txt
src/model/simpleMesh/include/: SEMmesh.hpp
src/model/simpleMesh/src/: SEMmesh.cpp  test_mesh.cpp
src/sem/: CMakeLists.txt  SEMmesh.cpp  main.cpp  pysem.cpp
src/sem/finiteElements/: SEMQkGL.hpp  SEMQkGLBasisFunctions.hpp  SEMQkGLBasisFunctionsOptim.hpp  SEMQkGLIntegrals.hpp  SEMQkGLIntegralsClassic.hpp  SEMQkGLIntegralsOptim.hpp  SEMQkGLIntegralsShiva.hpp
src/sem/main/: SEMdata.hpp  SEMmacros.hpp  SEMproxy.cpp  SEMproxy.hpp  argsparse.hpp  main.cpp
src/sem/mesh/: SEMmesh.cpp  SEMmesh.hpp
src/sem/solver/: SEMsolver.cpp  SEMsolver.hpp
src/solver/: CMakeLists.txt
src/solver/api/include/: SolverBase.hpp  sem_solver_acoustic.h  sem_solver_base.h  sem_solver_elastic.h  solver_base.h
src/solver/fd/: CMakeLists.txt
src/solver/fd/include/: fd_solver.h  fdtd_solver.h  (+1 more)
src/solver/impl/: CMakeLists.txt
src/solver/include/: SEMsolver.hpp  SEMsolver_impl.hpp  SolverBase.hpp  solverFactory.hpp
src/solver/pywrap/: CMakeLists.txt
src/solver/src/: SEMQ1_classic_solver.cpp  SEMQ1_geos_solver.cpp  SEMQ1_optim_solver.cpp  SEMQ1_shiva_solver.cpp  SEMQ2_classic_solver.cpp  SEMQ2_geos_solver.cpp  SEMQ2_optim_solver.cpp  SEMQ2_shiva_solver.cpp  SEMQ3_classic_solver.cpp  SEMQ3_geos_solver.cpp  SEMQ3_optim_solver.cpp  SEMQ3_shiva_solver.cpp  SEMQ3_struct_shiva_solver.cpp  SEMQ3_unstruct_shiva_solver.cpp  SEMSolver_10.cpp  SEMSolver_11.cpp  SEMSolver_12.cpp  SEMSolver_13.cpp  SEMSolver_20.cpp  SEMSolver_21.cpp  SEMSolver_22.cpp  SEMSolver_23.cpp  SEMSolver_30.cpp  SEMSolver_31.cpp  SEMSolver_32.cpp  SEMSolver_33.cpp  SEMsolver.cpp  pysolver.cpp  solverFactory.cpp
src/tests/: CMakeLists.txt  test_Kokkos2.cpp
src/utils/: CMakeLists.txt  argsparse.cpp  argsparse.hpp  caliperUtils.hpp  commonConfig.hpp.in  commonMacros.hpp  dataType.hpp  ezvLauncher.hpp
src/utils/include/: SEMdata.hpp  SEMmacros.hpp  adios_utils.h  args_parse.h  argsparse.hpp  caliperUtils.hpp  commonConfig.hpp.in  commonMacros.hpp  common_macros.h  dataType.hpp  data_type.h  ezvLauncher.hpp  read_sepfile.h  sem_macros.h  sourceAndReceiverUtils.hpp  source_and_receiver_utils.h  utils.h  utils.hpp
(+330 files in other folders)
